# test-2

./: .gitignore  answer.txt  candidates.json  pyproject.toml  report.tex  run_final_search.py  run_notebooks.py  sparsetap_config.py  sparsetap_core.py  sparsetap_utils.py
docs/plans/: 2026-03-29-sparsetap-notebook-pipeline.md  experiment_design.md
notebooks/: 00_setup.ipynb  01_data_inspection.ipynb  02_predictive_track.ipynb  03_rule_recovery_track.ipynb  04_candidate_evaluation.ipynb  05_final_prediction.ipynb  06_full_experiment.ipynb
src/sparsetap/: __init__.py  data.py  evaluation.py  gd_models.py  io.py  models.py  scoring.py  search.py  statistical.py  utils.py  wht.py
tests/: test_core.py  test_core_engine.py  test_experiment_support.py  test_final_execution.py  test_gd_models.py  test_wht.py
tools/: generate_full_experiment_notebook.py  generate_notebooks.py
