[project]
name = "sparsetap-day2"
version = "0.1.0"
description = "SparseTap Day2 experimental workspace"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pytest>=8.3,<9",
    "scikit-learn>=1.5,<2",
    "xgboost>=2.1,<4",
]

[project.optional-dependencies]
mlp = [
    "torch>=2.4,<3",
]

[tool.uv]
package = false
